[gd_scene load_steps=3 format=3 uid="uid://d2o1y0vocwen"]

[ext_resource type="Theme" uid="uid://del8o8hyfbvg8" path="res://assets/main_theme.tres" id="1_jqap1"]
[ext_resource type="Script" uid="uid://dyavrb3icdu5m" path="res://scripts/cluster_container.gd" id="1_oc8bi"]

[node name="cluster_container" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oc8bi")

[node name="OptionsBar" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.527778
anchor_right = 0.99975
anchor_bottom = 0.722667
offset_right = 0.32
offset_bottom = -0.32

[node name="KClusters" type="HBoxContainer" parent="OptionsBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.230469
anchor_top = 0.5
anchor_right = 0.230469
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -15.5
offset_right = 79.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsBar/KClusters"]
layout_mode = 2
text = "K clusters"
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SpinBox" type="SpinBox" parent="OptionsBar/KClusters"]
layout_mode = 2
min_value = 2.0
max_value = 3.0
value = 3.0
rounded = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ImportDatabase" type="Button" parent="OptionsBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -26.5
offset_right = 132.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jqap1")
text = "Import database"

[node name="ModesButton" type="OptionButton" parent="OptionsBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.775
anchor_top = 0.5
anchor_right = 0.775
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -15.5
offset_right = 59.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
selected = 0
item_count = 3
popup/item_0/text = "Average"
popup/item_0/id = 0
popup/item_1/text = "Complete"
popup/item_1/id = 1
popup/item_2/text = "Ward"
popup/item_2/id = 2

[node name="LaunchButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35625
anchor_top = 0.736167
anchor_right = 0.633906
anchor_bottom = 0.858278
offset_top = -0.0400391
offset_right = -0.400085
offset_bottom = 0.039978
theme = ExtResource("1_jqap1")
disabled = true
text = "Launch Clustering"
metadata/_edit_use_anchors_ = true

[node name="DendrogramWindow" type="Window" parent="."]
auto_translate_mode = 1
title = "Dendrogram"
initial_position = 1
size = Vector2i(1280, 800)
visible = false

[node name="TextureRect" type="TextureRect" parent="DendrogramWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[connection signal="value_changed" from="OptionsBar/KClusters/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="button_up" from="OptionsBar/ImportDatabase" to="." method="_on_import_database_button_up"]
[connection signal="item_selected" from="OptionsBar/ModesButton" to="." method="_on_modes_button_item_selected"]
[connection signal="button_up" from="LaunchButton" to="." method="_on_launch_button_button_up"]
[connection signal="close_requested" from="DendrogramWindow" to="." method="_on_dendrogram_window_close_requested"]
